cloud-deploy/target/classes/META-INF/jkube/openshift/temperatures-route-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: temperatures-route
    provider: jkube
    version: 1.0-SNAPSHOT
    group: com.redhat.training
  name: temperatures-route
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: temperatures-route
    provider: jkube
    group: com.redhat.training
  strategy:
    recreateParams:
      timeoutSeconds: 3600
    type: Recreate
  template:
    metadata:
      labels:
        app: temperatures-route
        provider: jkube
        version: 1.0-SNAPSHOT
        group: com.redhat.training
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: "{\"server\":{\"undertow\":{\"io-threads\":1, \"worker-threads\"\
            :2 }}}"
        - name: TEMPERATURE_CELSIUS_SERVICE
          value: temperatures-celsius-app:3000
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: temperatures-route:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /camel/
            port: 8080
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 6
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: temperatures-route:latest
    type: ImageChange
