cloud-deploy/target/classes/META-INF/jkube/openshift/temperatures-route-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: temperatures-route
    provider: jkube
    version: 1.0-SNAPSHOT
    group: com.redhat.training
  name: temperatures-route
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: temperatures-route
    provider: jkube
    group: com.redhat.training
