cloud-deploy/target/classes/META-INF/jkube/openshift/temperatures-route-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: temperatures-route
    provider: jkube
    version: 1.0-SNAPSHOT
    group: com.redhat.training
  name: temperatures-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: temperatures-route
